[project]
name = "project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Tereshchenko",email = "stilisthater@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
