[project]
name = "project-1-Tereshchenko-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Tereshchenko",email = "stilisthater@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    {include = "labyrinth_game"},
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycahe__"]

[tool.ruff.lint]
select = ["E","F","I"]
ignore = []
[tool.ruff.format]
quote-style = "double"